<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/videoPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Path"
            android:textSize="16sp" />

        <VideoView
            android:id="@+id/videothumb"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playVideo"
            android:background="@drawable/rectangle_button"
            app:backgroundTint="#acacac"
            android:textColor="#000000"/>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>