<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.loadactivities.LoadAudioActivity">

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="416dp"
        android:layout_height="49dp"
        android:layout_margin="16dp"
        android:hint="@string/addDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonVolverAudioLibrary"
        android:layout_width="416dp"
        android:layout_height="49dp"
        android:layout_marginTop="748dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/btVolver"
        android:textColor="#000000"
        app:backgroundTint="#acacac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <Button
        android:id="@+id/buttonRecordAudio"
        android:layout_width="414dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/startRecording"
        android:textColor="#000000"
        app:backgroundTint="#acacac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <Button
        android:id="@+id/buttonRecordAudio2"
        android:layout_width="414dp"
        android:layout_height="51dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/stopRecording"
        android:textColor="#000000"
        app:backgroundTint="#acacac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
