<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.loadactivities.LoadImageActivity">

    <Button
        android:id="@+id/btnSacarFoto"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/textSacarfoto"
        android:textColor="#000000"
        app:backgroundTint="#acacac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <Button
        android:id="@+id/btIrApuntes2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/btIrApuntes"
        android:textColor="#000000"
        app:backgroundTint="#acacac"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <EditText
        android:id="@+id/textImage"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/text_hint_image"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />
</androidx.constraintlayout.widget.ConstraintLayout>